--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    Before
+    <%- include("../ui/header.ejs") %>
+    <%- include("../ui/error.ejs") %>
     <%- body %>
-    After
 </body>
 </html>
